--- a/Speedbump/Speedbump.csproj
+++ b/Speedbump/Speedbump.csproj
@@ -19,4 +19,8 @@
 	<FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
