--- a/Speedbump/Speedbump.csproj
+++ b/Speedbump/Speedbump.csproj
@@ -13,7 +13,9 @@
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.3.0-nightly-01160" />
     <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0-nightly-01160" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="4.3.0-nightly-01160" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0-preview.7.22376.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0-preview.7.22376.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-preview.7.22375.6" />
     <PackageReference Include="MySql.Data" Version="8.0.29" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
 	<FrameworkReference Include="Microsoft.AspNetCore.App" />
